238

- Update Jetty to 11.0.17
- Add node annotations to openmetrics labels

237

- Update to OpenTelemetry 1.30.1

236

- Do not localize Jakarta validation messages
- Remove escaping of HTML characters in JSON responses
- Add config for SO_KEEPALIVE for HTTP client

235

- Use annotation file for both traces and logs

234

- Move to Jakarta validation API
- Fail response if HttpStatusListener throws an exception

233

- Move to Jakarta dependencies

232

- HTTP client status listener

231

- Restore pre 2.15 Jackson string deserialization length limit

230

- Remove broken uncaught exception handler from Bootstrap
- Switch logging BufferedHandler to full non-blocking implementation
- Expose cache load count in JMX cache stats

229

- Strip trailing whitespace when redirecting standard output streams to log
- Add OpenTelemetry tracing module
- Add OpenTelemetry tracing to HTTP client
- Add OpenTelemetry tracing for JAX-RS
- Add OpenTelemetry trace context to JSON logging
- Add openmetrics and security-jwks to BOM
- Add getProperty method to AbstractConfigurationAwareModule
- Fix HTTP client request size statistic

228

- Exclude Hamcrest from jaxrs-testing

227

- Exclude jakarta.ws.rs-api from jaxrs

226

- Fix incorrect value reporting in sparse HLL
- Update to Airbase 134
- Update to Jetty 10.0.14
- Update to Jersey 2.39

225

- Upgrade to Slice 0.45
- Remove legacy logging implementation

224

- Add openmetrics module
- Add ByteBufferBodyGenerator for HTTP client

223

- Deprecate custom HTTP client BodyGenerator implementations
- Update to Jetty 10.0.13

222

- Update to Jetty 9.4.50.v20221201
- Use jetty-servlet-api instead of javax.servlet-api

221

- Fix hang in logger shutdown.

220

- Change target Java version to 17.
- Make CpuTimer user time collection optional.
- Add custom ticker support to CpuTimer.
- Add primitive methods to TDigest stats to avoid unnecessary boxing.
- Support configs bound with prefix in ConditionalModule.

219
