@@ -2,6 +2,7 @@
 
 - Update Jetty to 11.0.17
 - Add node annotations to openmetrics labels
+- Remove non-strict config from Bootstrap
 
 237
 
